--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,3 +19,11 @@ body {
   background-color: $base-background-color;
   color: $base-font-color;
 }
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding: .5em;
+}
