created map view, got hbs showing correctly

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,7 +29,12 @@ li {
   display: inline-block;
 }
 
-#app {
-  height: 400px;
+.heading {
+  height: 100px;
   width: 800px;
+}
+
+.map {
+  height: 500px;
+  width: 500px;
 }
