--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,1 +1,12 @@
 <h1>Bicycle Routes in Greenville</h1>
+<ul class="heading">
+  <li>
+    <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+  </li>
+</ul>
