--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -1,2 +1,12 @@
 <h1>hallo</h1>
 <div id="app"></div>
+<button class="show-add-brl">Add a rack!</button>
+
+<form class="add-brl-form hidden">
+  <input class="title"type="text" placeholder="title">
+  <input class="lat" type="number" placeholder="latitude">
+  <input class="lng" type="number" placeholder="longitude">
+  <input class="infoWindow"type="text" placeholder="add info">
+  <input class="bookmark-save" type="submit" placeholder="save">
+  <input class="add-brl" type="submit" placeholder="Add">
+</form>
