console logging new brl

--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,1 +1,10 @@
 <h1>lol</h1>
+
+<ul class="heading">
+  <li>
+    <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+  </li>
+</ul>
