--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -1,1 +1,10 @@
 <h1>rentals in gvl</h1>
+
+<ul class="heading">
+  <li>
+    <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+  </li>
+</ul>
