--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -1,12 +1,20 @@
-<h1>hallo</h1>
-<div id="app"></div>
+<h1>Bike Rack Locations</h1>
+
+<ul class="heading">
+  <li>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+  </li>
+</ul>
+
 <button class="show-add-brl">Add a rack!</button>
 
-<form class="add-brl-form hidden">
+<form action= class="add-brl-form hidden">
   <input class="title"type="text" placeholder="title">
   <input class="lat" type="number" placeholder="latitude">
   <input class="lng" type="number" placeholder="longitude">
   <input class="infoWindow"type="text" placeholder="add info">
-  <input class="bookmark-save" type="submit" placeholder="save">
   <input class="add-brl" type="submit" placeholder="Add">
 </form>
