showing markers loaded from parse

--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -17,4 +17,5 @@
   <input class="lng" type="number" placeholder="longitude">
   <input class="infoWindow"type="text" placeholder="add info">
   <input class="add-brl" type="submit" placeholder="Add">
+  <button class="remove-form">Clear</button>
 </form>
