--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -8,3 +8,8 @@
     <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
   </li>
 </ul>
+
+<ul>
+  <li>{{law-title}}</li>
+  <li>{{law-text}}</li>
+</ul>
