create working and pushing to parse, updating on map as soon as submit is hit, infoWindow is object

--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -11,7 +11,7 @@
 
 <button class="show-add-brl">Add a rack!</button>
 
-<form action= class="add-brl-form hidden">
+<form class="add-brl-form hidden">
   <input class="title"type="text" placeholder="title">
   <input class="lat" type="number" placeholder="latitude">
   <input class="lng" type="number" placeholder="longitude">
