--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -2,6 +2,10 @@
 
 <ul class="heading">
   <li>
+    <a href="https://greenville.bcycle.com/"><button class="bcycle">Find bCycles here</button></a>
+  </li>
+
+  <li>
     <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
   </li>
   <li>
