login working, logout almost there

--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -19,3 +19,5 @@
   <input class="add-brl" type="submit" placeholder="Add">
   <button class="remove-form">Clear</button>
 </form>
+
+<button>Logout</button>
