--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -3,7 +3,7 @@
   <div class="error" style="display:none"></div>
   <input class="login-username" placeholder="Username">
   <input class="login-password" placeholder="Password">
-  <button>Log In</button>
+  <button class="login-button">Log In</button>
 </form>
 <form class="signup-form">
   <h2>Sign Up</h2>
@@ -11,5 +11,5 @@
   <input class="signup-username" placeholder="Username">
   <input class="signup-password" placeholder="Password">
   <input class="signup-email" placeholder="Email">
-  <button>Sign Up</button>
+  <button class="signup-button">Sign Up</button>
 </form>
