--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -12,3 +12,5 @@
     <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
   </li>
 </ul>
+
+<button>Logout</button>
