--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -18,7 +18,7 @@
   {{#each Marker}}
   <li>
     <h3>
-      {{title}} "-" {{infoWindow}}
+      {{title}}  {{infoWindow}}
     </h3>
   </li>
   {{/each}}
