--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -13,11 +13,11 @@
 
 <form class="add-brl-form hidden">
   <input class="title"type="text" placeholder="title">
-  <input class="lat" type="number" placeholder="latitude">
-  <input class="lng" type="number" placeholder="longitude">
+  <input class="lat" type="text" placeholder="latitude">
+  <input class="lng" type="text" placeholder="longitude">
   <input class="infoWindow"type="text" placeholder="add info">
   <input class="add-brl" type="submit" placeholder="Add">
   <button class="remove-form">Clear</button>
 </form>
 
-<button class="logout">Logout</button>
+<button class="logout-button">Logout</button>
