--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -1,6 +1,6 @@
-<h1>Bike Rack Locations</h1>
+<h1 class="brl-title">Bike Rack Locations</h1>
 
-<ul class="heading">
+<ul class="brl-heading">
   <li>
     <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
   </li>
