--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,4 +1,4 @@
-<h1>Statewide Laws</h1>
+<h1 class="laws-title">Statewide Laws</h1>
 
 <ul class="heading">
   <li>
@@ -9,7 +9,7 @@
   </li>
 </ul>
 
-<ul class=laws>
+<ul class="laws">
   <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
   <li>Bicycles should be in the bike lane unless there is an obstruction. </li>
   <li>Bicycles are allowed on roadways where lanes don’t exist, but must ride as far right as possible, unless another lane provides the only path for a cyclist to continue on their route.</li>
@@ -17,7 +17,7 @@
   <li>Cyclists must indicate turns.</li>
 </ul>
 
-<ul>
+<ul class="ideas">
   <li>Helmets are not required, but prevent major brain damage and sometimes death.</li>
   <li>When wearing headphones, only one ear is suggested. Hearing is the strongest advantage cyclists have above cars.</li>
 </ul>
