--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -1,9 +1,13 @@
-.heading {
-  height: 50px;
-  width: 800px;
-}
+@media (min-width: 840px) {
 
-.map {
-  height: 500px;
-  width: 500px;
+  .heading {
+    height: 50px;
+    width: 800px;
+  }
+
+  .map {
+    height: 500px;
+    width: 1800px;
+  }
+
 }
