--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,7 +20,7 @@ $base-background-color: $very-light-gray;
 
 body {
   font-family: $base-font-family;
-  background-color: $base-background-color;
+  background-color: rgba(81, 166, 255, 1);
   color: $base-font-color;
 }
 
@@ -33,6 +33,11 @@ li {
   display: inline-block;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .hidden {
   display: none;
 }
@@ -40,4 +45,71 @@ li {
 #app {
   height: 100%;
   width: 100%;
+}
+
+button {
+  background-color: rgba(255, 255, 255, 1);
+  border: none;
+  padding: 20px;
+}
+
+button:hover {
+  background-color: rgba(255, 244, 194, 1);
+}
+
+button:active{
+  background-color: rgba(255, 201, 121, 1);
+}
+
+.logout-button{
+  padding: 10px;
+}
+
+.logout-button:hover{
+  background-color: rgba(255, 121, 121, 1);
+}
+
+//index page
+
+.index-header {
+  @include outer-container;
+  @include span-columns(9);
+  @include shift (2);
+  margin-top: 15%;
+}
+
+.heading {
+  @include outer-container;
+  @include span-columns(9);
+  @include shift (2);
+}
+
+.logout-button {
+  @include outer-container;
+  @include span-columns(2);
+  @include shift (5);
+  margin-top: 5%;
+}
+
+.brl-title{
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+}
+
+.brl-heading button {
+  padding: 5px;
+  text-align: center;
+}
+
+.laws-title {
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+}
+
+.laws {
+  font-weight: bold;
+}
+
+.ideas {
+  font-weight: bold;
 }
