--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,4 +1,4 @@
-<h1>What do you want to know about bikes in Greenville {{username}}?</h1>
+<h1 class="index-header">What do you want to know about cycling in Greenville {{username}}?</h1>
 <ul class="heading">
   <li>
     <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
