--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -1,3 +1,5 @@
+<h1>Wlecoeldsg to yr dreems</h1>
+
 <form class="login-form">
   <h2>Log In</h2>
   <input class="login-username" placeholder="Username">
