CRUD functionality on notes page working

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -13,7 +13,7 @@
     <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#notes"><button class="notes">Your Notes</button></a>
+    <a href="http://localhost:9000/#yournotes"><button class="yourNotes">Your Notes</button></a>
   </li>
 </ul>
 
