--- a/templates/notes-list-item.hbs
+++ b/templates/notes-list-item.hbs
@@ -1,5 +1,5 @@
-<h1 class="user-single-title">{{title}}</h1>
-<p class="user-single-content">{{content}}</p>
+<h1 class="note-title">{{title}}</h1>
+<p class="note-content">{{content}}</p>
 
 <button class="note-edit-button">edit</button>
 
