--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -1,5 +1,12 @@
 <button class="add-notes-button">Add notes here</button>
 
+<form class="notes-add-form hidden">
+  <input class="notes-title"type="text" placeholder="title">
+  <input class="notes-content" type="text" placeholder="content">
+  <input class="notes-reset" type="reset" placeholder="reset">
+  <input class="notes-save" type="submit" placeholder="save">
+</form>
+
 <h1>Your Notes</h1>
 
 <ul class="user-notes">
