cleaning up a bit

--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -3,13 +3,13 @@
 <form class="login-form">
   <h2>Log In</h2>
   <input class="login-username" placeholder="Username">
-  <input class="login-password" placeholder="Password">
+  <input type="password" class="login-password" placeholder="Password">
   <button class="login-button">Log In</button>
 </form>
 <form class="signup-form">
   <h2>Sign Up</h2>
   <input class="signup-username" placeholder="Username">
-  <input class="signup-password" placeholder="Password">
+  <input type="password" class="signup-password" placeholder="Password">
   <input class="signup-email" placeholder="Email">
   <button class="signup-button">Sign Up</button>
 </form>
