--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -7,7 +7,7 @@
   <input class="notes-save" type="submit" placeholder="save">
 </form>
 
-<h1>Your Notes</h1>
+<h1>Public Notes</h1>
 
 <ul class="user-notes">
 
