--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -1,15 +1,20 @@
-<h1>Wlecoeldsg to yr dreems</h1>
+<h1 class="heading">Welcome to G-Vegas</h1>
 
-<form class="login-form">
-  <h2>Log In</h2>
-  <input class="login-username" placeholder="Username">
-  <input type="password" class="login-password" placeholder="Password">
-  <button class="login-button">Log In</button>
-</form>
-<form class="signup-form">
-  <h2>Sign Up</h2>
-  <input class="signup-username" placeholder="Username">
-  <input type="password" class="signup-password" placeholder="Password">
-  <input class="signup-email" placeholder="Email">
-  <button class="signup-button">Sign Up</button>
-</form>
+<div class="login-form-container">
+  <form class="login-form">
+    <h2 class="login-heading">Have an account?</h2>
+    <input class="login-username " placeholder="Username">
+    <input type="password" class="login-password " placeholder="Password">
+    <button class="login-button ">Log In</button>
+  </form>
+</div>
+
+<div class="signup-form-container">
+  <form class="signup-form">
+    <h2 class="signup-heading">New to us?</h2>
+    <input class="signup-username hidden" placeholder="Username">
+    <input type="password" class="signup-password hidden" placeholder="Password">
+    <input class="signup-email hidden" placeholder="Email">
+    <button class="signup-button hidden">Sign Up</button>
+  </form>
+</div>
