login fully responsive

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,7 +63,7 @@ h6 {
 button {
   background-color: rgba(255, 255, 255, 1);
   border: none;
-  padding: 20px;
+  padding: 2%;
 }
 
 button:hover {
