--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -11,7 +11,7 @@
 
 <div class="signup-form-container">
   <form class="signup-form">
-    <h2 class="signup-heading">New to us?</h2>
+    <h2 class="signup-heading"><button>New to us?</button></h2>
     <input class="signup-username hidden" placeholder="Username">
     <input type="password" class="signup-password hidden" placeholder="Password">
     <input class="signup-email hidden" placeholder="Email">
