--- a/styles/_login.scss
+++ b/styles/_login.scss
@@ -71,6 +71,8 @@
     @include shift (4);
     display: block;
     text-align: center;
+    margin-bottom: 2%;
+    margin-top: 2%;
   }
 
   .signup-form-container {
@@ -83,10 +85,11 @@
 
   .signup-heading {
     @include outer-container;
-    @include span-columns(6);
-    @include shift (3);
+    @include span-columns(4);
+    @include shift (4);
     display: block;
     text-align: center;
+    margin-bottom: 2%;
   }
 
   .signup-heading:hover{
@@ -125,6 +128,8 @@
     @include shift (4);
     display: block;
     text-align: center;
+    margin-bottom: 2%;
+    margin-top: 2%;
   }
 
 
@@ -195,6 +200,8 @@
       @include shift (4);
       display: block;
       text-align: center;
+      margin-bottom: 2%;
+      margin-top: 2%;
     }
 
     .signup-form-container {
@@ -211,6 +218,7 @@
       @include shift (3);
       display: block;
       text-align: center;
+      margin-bottom: 2%;
     }
 
     .signup-heading:hover{
@@ -249,6 +257,8 @@
       @include shift (4);
       display: block;
       text-align: center;
+      margin-bottom: 2%;
+      margin-top: 2%;
     }
 
 
@@ -268,7 +278,7 @@
     .heading {
       background-color: rgba(255, 255, 255, .9);
       text-align: center;
-      font-size: 1em;
+      font-size: 3em;
       margin-top: .5em;
       margin-bottom: 1em;
     }
@@ -279,11 +289,11 @@
 
     .login-heading {
       background-color: rgba(255, 255, 255, .9);
-      font-size: 1em;
+      font-size: 1.5em;
       display: inline-block;
       text-align: center;
       padding: 0;
-      margin: 0;
+      margin: 0 0 2% 28%;
     }
 
     .login-heading:hover {
@@ -314,15 +324,23 @@
       display: block;
       text-align: center;
       padding: 2px;
+      margin-bottom: 2%;
+      margin-top: 2%;
+    }
+
+    .signup-form {
+      display: block;
     }
 
     .signup-heading {
-      background-color: rgba(255, 255, 255, .9);
-      font-size: 1em;
-      display: inline-block;
+      @include outer-container;
+      @include span-columns(4);
+      @include shift(4);
+      display: block;
       text-align: center;
-      padding: 0;
-      margin: 0;
+      padding: 2px;
+      margin-bottom: 2%;
+      margin-top: 2%;
     }
 
     .signup-heading:hover{
@@ -362,7 +380,8 @@
       display: block;
       text-align: center;
       padding: 2px;
-
+      margin-bottom: 2%;
+      margin-top: 2%;
     }
 
 }
