--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -1,11 +1,14 @@
 <h1 class="brl-title">Bike Rack Locations</h1>
 
-<ul class="brl-heading">
+<ul class="header">
   <li>
     <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
   </li>
   <li>
     <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#notes"><button class="notes">Notes</button></a>
   </li>
 </ul>
 
@@ -16,7 +19,7 @@
   <input class="lat" type="text" placeholder="latitude">
   <input class="lng" type="text" placeholder="longitude">
   <input class="infoWindow"type="text" placeholder="add info">
-  <input class="add-brl" type="submit" placeholder="Add">
+  <button class="add-brl" type="submit" placeholder="Add">Submit</button>
   <button class="remove-form">Clear</button>
 </form>
 
