--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,11 +1,17 @@
 <h1 class="laws-title">Statewide Laws</h1>
 
-<ul class="heading">
+<ul class="header">
+  <li>
+    <a href="https://greenville.bcycle.com/"><button class="bcycle">Find bCycles here</button></a>
+  </li>
   <li>
     <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
   </li>
   <li>
     <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#notes"><button class="notes">Notes</button></a>
   </li>
 </ul>
 
