--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -1,10 +1,22 @@
+<ul class="header">
+  <li>
+    <a href="https://greenville.bcycle.com/"><button class="bcycle">Find bCycles here</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+  </li>
+</ul>
+
 <button class="add-notes-button">Add notes here</button>
 
 <form class="notes-add-form hidden">
-  <input class="notes-title"type="text" placeholder="title">
-  <input class="notes-content" type="text" placeholder="content">
-  <input class="notes-reset" type="reset" placeholder="reset">
-  <input class="notes-save" type="submit" placeholder="save">
+  <input class="notes-title-add"type="text" placeholder="title">
+  <input class="notes-content-add" type="text" placeholder="content">
+  <input class="notes-reset-add" type="reset" placeholder="reset">
+  <input class="notes-save-add" type="submit" placeholder="save">
 </form>
 
 <h1>Public Notes</h1>
