--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -1,15 +1,17 @@
 <h1>rentals in gvl</h1>
 
-<ul class="heading">
+<ul class="header">
   <li>
     <a href="https://greenville.bcycle.com/"><button class="bcycle">Find bCycles here</button></a>
   </li>
-
   <li>
     <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
   </li>
   <li>
     <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#notes"><button class="notes">Notes</button></a>
   </li>
 </ul>
 
