--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -2,13 +2,16 @@
 
 <ul class="header">
   <li>
-    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes-link">Rental Bike Locations</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
+    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#notes"><button class="notes">Notes</button></a>
+    <a href="http://localhost:9000/#laws"><button class="laws-link">Laws and Safety</button></a>
+  </li>
+  <li>
+    <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
   </li>
 </ul>
 
