--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -2,16 +2,16 @@
 
 <ul class="header">
   <li>
-    <a href="https://greenville.bcycle.com/"><button class="bcycle">Find bCycles here</button></a>
+    <a href="http://localhost:9000/#brl"><button class="brl-link">Bike Rack Locations</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
+    <a href="http://localhost:9000/#rental"><button class="rental-bikes-link">Rental Bike Locations</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
+    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
   </li>
   <li>
-    <a href="http://localhost:9000/#notes"><button class="notes">Notes</button></a>
+    <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
   </li>
 </ul>
 
