logout button styled

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -15,3 +15,10 @@
   background-color: rgba(250, 234, 169, 1);
   color: rgba(239, 17, 123, 1);
 }
+
+.header .logout-button {
+  padding: 10px;
+  height: 2em;
+  text-align: right;
+  vertical-align: middle;
+}
