--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -11,6 +11,9 @@
   <li>
     <a href="http://localhost:9000/#laws"><button class="laws-link">Laws and Safety</button></a>
   </li>
+  <li>
+    <button class="logout-button">Logout</button>
+  </li>
 </ul>
 
 <button class="add-notes-button">Add notes here</button>
@@ -28,4 +31,6 @@
 
 </ul>
 
-<button class="logout-button">Logout</button>
+<div class="footer">
+  <button class="logout-button">Logout</button>
+</div>
