--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -13,6 +13,11 @@
   <li>
     <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
   </li>
+  <li>
+    <button class="logout-button">Logout</button>
+  </li>
 </ul>
 
-<button class="logout-button">Logout</button>
+<div class="footer">
+  <button class="logout-button">Logout</button>
+</div>
