--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -11,14 +11,8 @@
   height: 2em;
 }
 
-.header button:hover {
-  background-color: rgba(250, 234, 169, 1);
-  color: rgba(239, 17, 123, 1);
-}
-
 .header .logout-button {
-  padding: 10px;
   height: 2em;
-  text-align: right;
   vertical-align: middle;
+  padding: 2px 6px 3px 6px;
 }
