--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -1,4 +1,4 @@
-<h1>rentals in gvl</h1>
+<h1 class="title">Bicycle Rentals in Greenville</h1>
 
 <ul class="header">
   <li>
@@ -17,7 +17,3 @@
     <button class="logout-button">Logout</button>
   </li>
 </ul>
-
-<div class="footer">
-  <button class="logout-button">Logout</button>
-</div>
