--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -1,3 +1,5 @@
+<h1 class="title">Public Notes</h1>
+
 <ul class="header">
   <li>
     <a href="http://localhost:9000/#brl"><button class="brl-link">Bike Rack Locations</button></a>
