add rack button better looking on brl route

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -9,6 +9,7 @@
 .header button {
   background-color: rgba(255, 218, 56, 1);
   height: 2em;
+  vertical-align: middle;
 }
 
 .header .logout-button {
