--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -18,13 +18,15 @@
   </li>
 </ul>
 
-<button class="show-add-brl">Add a rack!</button>
-
-<form class="add-brl-form hidden">
-  <input class="title"type="text" placeholder="title">
-  <input class="lat" type="text" placeholder="latitude">
-  <input class="lng" type="text" placeholder="longitude">
-  <input class="infoWindow"type="text" placeholder="add info">
-  <button class="add-brl" type="submit" placeholder="Add">Submit</button>
-  <button class="remove-form">Clear</button>
-</form>
+<div class="add-rack-div">
+  <button class="show-add-brl">Add a rack!</button>
+  
+  <form class="add-brl-form hidden">
+    <input class="title"type="text" placeholder="title">
+    <input class="lat" type="text" placeholder="latitude">
+    <input class="lng" type="text" placeholder="longitude">
+    <input class="infoWindow"type="text" placeholder="add info">
+    <button class="add-brl" type="submit" placeholder="Add">Submit</button>
+    <button class="remove-form">Clear</button>
+  </form>
+</div>
