--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,22 +1,27 @@
-<h1 class="title">South Carolina Laws</h1>
+<div class="full-heading">
 
-<ul class="header">
-  <li>
-    <a href="http://localhost:9000/#brl"><button class="brl-link">Bike Rack Locations</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#rental"><button class="rental-bikes-link">Rental Bike Locations</button></a>
-  </li>
-  <li>
-    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
-  </li>
-  <li>
-    <button class="logout-button">Logout</button>
-  </li>
-</ul>
+  <h1 class="title">South Carolina Laws</h1>
+
+  <nav class="cl-effect-21">
+    <ul class="header">
+      <li>
+        <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+      </li>
+      <li>
+        <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#notes"><span>Notes</span></a>
+      </li>
+      <li>
+        <button class="logout-button btn-6a">Logout</button>
+      </li>
+    </ul>
+  </nav>
+</div>
 
 <ul class="laws">
   <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
