--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -1,32 +1,35 @@
-<h1 class="title">Bike Rack Locations</h1>
+<div class="full-heading">
+  <nav class="cl-effect-21">
+    <h1><a href="http://localhost:9000/#brl"><span>Bike rack locations</span></a></h1>
+    <ul class="header">
+      <li>
+        <a class="rental-bikes-link" href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+      </li>
+      <li>
+        <a class="bCycle-link" href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
+      </li>
+      <li>
+        <a class="laws-link" href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+      </li>
+      <li>
+        <a class="notes-link" href="http://localhost:9000/#notes"><span>Notes</span></a>
+      </li>
+      <li>
+        <button class="logout-button btn-6a">Logout</button>
+      </li>
+    </ul>
+  </nav>
 
-<ul class="header">
-  <li>
-    <a href="http://localhost:9000/#rental"><button class="rental-bikes-link">Rental Bike Locations</button></a>
-  </li>
-  <li>
-    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#laws"><button class="laws-link">Laws and Safety</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
-  </li>
-  <li>
-    <button class="logout-button">Logout</button>
-  </li>
-</ul>
+  <div class="add-rack-div">
+    <button class="show-add-brl">Add a rack!</button>
 
-<div class="add-rack-div">
-  <button class="show-add-brl">Add a rack!</button>
-  
-  <form class="add-brl-form hidden">
-    <input class="title"type="text" placeholder="title">
-    <input class="lat" type="text" placeholder="latitude">
-    <input class="lng" type="text" placeholder="longitude">
-    <input class="infoWindow"type="text" placeholder="add info">
-    <button class="add-brl" type="submit" placeholder="Add">Submit</button>
-    <button class="remove-form">Clear</button>
-  </form>
+    <form class="add-brl-form hidden">
+      <input class="title"type="text" placeholder="title">
+      <input class="lat" type="text" placeholder="latitude">
+      <input class="lng" type="text" placeholder="longitude">
+      <input class="infoWindow"type="text" placeholder="add info">
+      <button class="add-brl" type="submit" placeholder="Add">Submit</button>
+      <button class="remove-form">Clear</button>
+    </form>
+  </div>
 </div>
