--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -1,22 +1,25 @@
-<h1 class="title">Public Notes</h1>
-
-<ul class="header">
-  <li>
-    <a href="http://localhost:9000/#brl"><button class="brl-link">Bike Rack Locations</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#rental"><button class="rental-bikes-link">Rental Bike Locations</button></a>
-  </li>
-  <li>
-    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#laws"><button class="laws-link">Laws and Safety</button></a>
-  </li>
-  <li>
-    <button class="logout-button">Logout</button>
-  </li>
-</ul>
+<div class="full-heading">
+  <nav class="cl-effect-21">
+    <h1><a href="http://localhost:9000/#notes"><span>Public Notes</span></a></h1>
+    <ul class="header">
+      <li>
+        <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+      </li>
+      <li>
+        <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+      </li>
+      <li>
+        <button class="logout-button btn-6a">Logout</button>
+      </li>
+    </ul>
+  </nav>
+</div>
 
 <button class="add-notes-button">Add notes here</button>
 
@@ -26,8 +29,6 @@
   <input class="notes-reset-add" type="reset" placeholder="reset">
   <input class="notes-save-add" type="submit" placeholder="save">
 </form>
-
-<h1>Public Notes</h1>
 
 <ul class="user-notes">
 
