--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -1,19 +1,22 @@
-<h1 class="title">Bicycle Rentals in Greenville</h1>
-
-<ul class="header">
-  <li>
-    <a href="http://localhost:9000/#brl"><button class="brl-link">Bike Rack Locations</button></a>
-  </li>
-  <li>
-    <a href="https://greenville.bcycle.com/"><button class="bCycle-link">Find bCycles here</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#laws"><button class="laws-link">Laws and Safety</button></a>
-  </li>
-  <li>
-    <a href="http://localhost:9000/#notes"><button class="notes-link">Notes</button></a>
-  </li>
-  <li>
-    <button class="logout-button">Logout</button>
-  </li>
-</ul>
+<div class="full-heading">
+  <nav class="cl-effect-21">
+    <h1><a href="http://localhost:9000/#rental"><span>Bicycle rental locations</span></a></h1>
+    <ul class="header">
+      <li>
+        <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+      </li>
+      <li>
+        <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+      </li>
+      <li>
+        <a href="http://localhost:9000/#notes"><span>Notes</span></a>
+      </li>
+      <li>
+        <button class="logout-button btn-6a">Logout</button>
+      </li>
+    </ul>
+  </nav>
+</div>
