notes page basically styled

--- a/templates/notes-list-item.hbs
+++ b/templates/notes-list-item.hbs
@@ -6,7 +6,7 @@
 
   <form class="note-edit-form hidden">
     <input class="note-title-edit" placeholder={{title}}>
-    <input class="note-content-edit" placeholder={{content}}>
+    <textarea class="note-content-edit" placeholder={{content}}></textarea>
     <button class="note-reset" type="reset">Reset</button>
     <button class="note-save" type="submit">Save</button>
     <button class="note-delete" type="delete">Delete</button>
