--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -25,7 +25,7 @@
 
 <form class="notes-add-form hidden">
   <input class="notes-title-add"type="text" placeholder="title">
-  <input class="notes-content-add" type="text" placeholder="content">
+  <textarea class="notes-content-add" placeholder="content"></textarea>
   <input class="notes-reset-add" type="reset" placeholder="reset">
   <input class="notes-save-add" type="submit" placeholder="save">
 </form>
@@ -33,7 +33,3 @@
 <ul class="user-notes">
 
 </ul>
-
-<div class="footer">
-  <button class="logout-button">Logout</button>
-</div>
