--- a/styles/_notes-list-item.scss
+++ b/styles/_notes-list-item.scss
@@ -1,3 +1,12 @@
+.notes-add-form{
+  display: inline-block;
+  background-color: rgba(255, 255, 255, .9);
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  font-size: 14px;
+}
+
 @media (min-width: 840px) {
 
 
