--- a/styles/_notes-list.scss
+++ b/styles/_notes-list.scss
@@ -1,10 +1,11 @@
 @media (min-width: 840px) {
 
 .whole-note{
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 25%;
+  background-color: rgba(255, 255, 255, .9);
   width: 100%;
   height: 100%;
+  padding: 1em;
+  font-size: 14px;
 }
 
 }
