--- a/styles/_link-styles.scss
+++ b/styles/_link-styles.scss
@@ -755,8 +755,8 @@ nav a:focus {
 }
 
 .cl-effect-18 a {
-	padding: 0 5px;
-	color: #b4770d;
+/* 	padding: 0 5px;
+ */	color: #b4770d;
 	font-weight: 700;
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
