--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -15,13 +15,13 @@
         <a class="notes-link" href="http://localhost:9000/#notes"><span>Notes</span></a>
       </li>
       <li>
-        <button class="logout-button btn-6a">Logout</button>
+        <a class="logout-button"><span>Logout</span></a>
       </li>
     </ul>
   </nav>
 
   <div class="add-rack-div">
-    <button class="show-add-brl">Add a rack!</button>
+      <button class="show-add-brl">Add a rack!</button>
 
     <form class="add-brl-form hidden">
       <input class="title"type="text" placeholder="title">
