--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -15,7 +15,7 @@
         <a href="http://localhost:9000/#notes"><span>Notes</span></a>
       </li>
       <li>
-        <button class="logout-button btn-6a">Logout</button>
+        <a class="logout-button"><span>Logout</span></a>
       </li>
     </ul>
   </nav>
