--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -15,7 +15,7 @@
   .header .logout-button {
     height: 2em;
     vertical-align: middle;
-    padding: 2px 6px 3px 6px;
+    padding: 10px;
   }
 }
 
