--- a/styles/_notes-list.scss
+++ b/styles/_notes-list.scss
@@ -11,9 +11,24 @@
 }
 
 @media (max-width: 839px) and (min-width: 500px) {
-
+  .whole-note{
+    background-color: rgba(255, 255, 255, .9);
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 499px) {
 
+
+
+  .whole-note{
+    background-color: rgba(255, 255, 255, .9);
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    font-size: 12px;
+  }
 }
