added pure, added tagline

--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -1,6 +1,9 @@
-<h1 class="heading">Welcome to G-Vegas</h1>
+<div class="heading">
+  <h3 class="headline">Ride and Rack</h1>
+  <h6 class="tagline">Ride your bicycle. Find a secure rack. Repeat.</h3>
+</div>
 
-<div class="login-form-container">
+<div class="login-form-container pure-form">
   <form class="login-form">
     <h2 class="login-heading">Have an account?</h2>
     <input class="login-username " placeholder="Username">
@@ -9,7 +12,7 @@
   </form>
 </div>
 
-<div class="signup-form-container">
+<div class="signup-form-container pure-form">
   <form class="signup-form">
     <h2 class="signup-heading"><button>New to us?</button></h2>
     <input class="signup-username hidden" placeholder="Username">
