--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -23,13 +23,13 @@
   <div class="add-rack-div">
       <button class="show-add-brl">Add a rack!</button>
 
-    <form class="add-brl-form hidden">
+    <form class="add-brl-form hidden pure-form">
       <input class="title"type="text" placeholder="title">
       <input class="lat" type="text" placeholder="latitude">
       <input class="lng" type="text" placeholder="longitude">
       <input class="infoWindow"type="text" placeholder="add info">
       <button class="add-brl" type="submit" placeholder="Add">Submit</button>
-      <button class="remove-form">Clear</button>
+      <button class="remove-form">Clear</button>      
     </form>
   </div>
 </div>
