--- a/templates/notes-list-item.hbs
+++ b/templates/notes-list-item.hbs
@@ -1,14 +1,14 @@
-<div class="whole-note">
+<li class="whole-note">
   <h1 class="note-title">{{title}}</h1>
   <p class="note-content">{{content}}</p>
 
   <button class="note-edit-button">edit</button>
 
-  <form class="note-edit-form hidden">
+  <form class="note-edit-form hidden pure-form pure-form-stacked">
     <input class="note-title-edit" placeholder={{title}}>
     <textarea class="note-content-edit" placeholder={{content}}></textarea>
     <button class="note-reset" type="reset">Reset</button>
     <button class="note-save" type="submit">Save</button>
     <button class="note-delete" type="delete">Delete</button>
   </form>
-</div>
+</li>
