--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -23,11 +23,11 @@
 
 <button class="add-notes-button">Add notes here</button>
 
-<form class="notes-add-form hidden">
-  <input class="notes-title-add"type="text" placeholder="title">
-  <textarea class="notes-content-add" placeholder="content"></textarea>
-  <input class="notes-reset-add" type="reset" placeholder="reset">
-  <input class="notes-save-add" type="submit" placeholder="save">
+<form class="notes-add-form hidden pure-form pure-form-stacked">
+    <input class="notes-title-add"type="text" placeholder="title">
+    <textarea class="notes-content-add" placeholder="content"></textarea>
+    <input class="notes-reset-add" type="reset" placeholder="reset">
+    <input class="notes-save-add" type="submit" placeholder="save">
 </form>
 
 <ul class="user-notes">
