--- a/styles/_notes-list.scss
+++ b/styles/_notes-list.scss
@@ -1,34 +1,35 @@
 @media (min-width: 840px) {
 
-.whole-note{
-  background-color: rgba(255, 255, 255, .9);
-  width: 100%;
-  height: 100%;
-  padding: 1em;
-  font-size: 14px;
-}
+  .whole-note{
+
+    background-color: rgba(255, 255, 255, .9);
+    height: 300px;
+    padding: 1em;
+    font-size: 12px;
+    overflow: scroll;
+  }
 
 }
 
 @media (max-width: 839px) and (min-width: 500px) {
   .whole-note{
+
     background-color: rgba(255, 255, 255, .9);
-    width: 100%;
-    height: 100%;
+    height: 300px;
     padding: 1em;
     font-size: 12px;
+    overflow: scroll;
   }
 }
 
 @media (max-width: 499px) {
 
-
-
   .whole-note{
+
     background-color: rgba(255, 255, 255, .9);
-    width: 100%;
-    height: 100%;
+    height: 300px;
     padding: 1em;
     font-size: 12px;
+    overflow: scroll;
   }
 }
