styled add notes div

--- a/templates/notes-list-item.hbs
+++ b/templates/notes-list-item.hbs
@@ -1,4 +1,4 @@
-<li class="whole-note">
+<div class="whole-note">
   <h1 class="note-title">{{title}}</h1>
   <p class="note-content">{{content}}</p>
 
@@ -11,4 +11,4 @@
     <button class="note-save" type="submit">Save</button>
     <button class="note-delete" type="delete">Delete</button>
   </form>
-</li>
+</div>
