--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -21,15 +21,12 @@
   </nav>
 </div>
 
-<button class="add-notes-button">Add notes here</button>
-
-<form class="notes-add-form hidden pure-form pure-form-stacked">
-    <input class="notes-title-add"type="text" placeholder="title">
-    <textarea class="notes-content-add" placeholder="content"></textarea>
-    <input class="notes-reset-add" type="reset" placeholder="reset">
-    <input class="notes-save-add" type="submit" placeholder="save">
-</form>
-
-<ul class="user-notes">
-
-</ul>
+<div class="add-notes-div">
+  <button class="add-notes-button">Add notes here</button>
+  <form class="notes-add-form hidden pure-form pure-form-stacked">
+      <input class="notes-title-add"type="text" placeholder="title">
+      <textarea class="notes-content-add" placeholder="content" rows="10"></textarea>
+      <input class="notes-reset-add" type="reset" placeholder="reset">
+      <input class="notes-save-add" type="submit" placeholder="save">
+  </form>
+</div>
