--- a/styles/_notes-list.scss
+++ b/styles/_notes-list.scss
@@ -1,35 +1,70 @@
+.notes-add-form{
+  display: inline-block;
+  background-color: rgba(255, 255, 255, .9);
+  width: 75%;
+  height: 75%;
+  padding: 1em;
+  font-size: 14px;
+  text-align: center;
+}
+
+.add-notes-div {
+  @include outer-container(12);
+  @include span-columns(4);
+  @include shift(4);
+  text-align: center;
+  display: inline-block;
+}
+
+.notes-content-add {
+  @include outer-container(12);
+  @include span-columns(12);
+}
+
+.notes-title-add{
+  @include outer-container(12);
+  @include span-columns(12);
+}
+
 @media (min-width: 840px) {
 
   .whole-note{
-
     background-color: rgba(255, 255, 255, .9);
-    height: 300px;
+    height: 200px;
+    width: 200px;
     padding: 1em;
-    font-size: 12px;
+    font-size: 14px;
     overflow: scroll;
+    display: inline-block;
+  }
+
+  .note-title{
+    margin: 0;
   }
 
 }
 
 @media (max-width: 839px) and (min-width: 500px) {
   .whole-note{
-
     background-color: rgba(255, 255, 255, .9);
     height: 300px;
+    width: 200px;
     padding: 1em;
     font-size: 12px;
     overflow: scroll;
+    display: inline-block;
   }
 }
 
 @media (max-width: 499px) {
 
   .whole-note{
-
     background-color: rgba(255, 255, 255, .9);
     height: 300px;
+    width: 200px;
     padding: 1em;
     font-size: 12px;
     overflow: scroll;
+    display: inline-block;
   }
 }
