--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -17,7 +17,7 @@
         <a href="http://localhost:9000/#notes"><span>Notes</span></a>
       </li>
       <li>
-        <a class="logout-button"><span>Logout</span></a>
+        <a href="#" class="logout-button"><span>Logout</span></a>
       </li>
     </ul>
   </nav>
