--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -15,7 +15,7 @@
         <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
       </li>
       <li>
-        <a class="logout-button"><span>Logout</span></a>
+        <a href="#" class="logout-button"><span>Logout</span></a>
       </li>
     </ul>
   </nav>
