--- a/styles/_notes-list.scss
+++ b/styles/_notes-list.scss
@@ -26,6 +26,10 @@
   @include span-columns(12);
 }
 
+.add-notes-button{
+  margin-bottom: .5em;
+}
+
 @media (min-width: 840px) {
 
   .whole-note{
@@ -47,12 +51,16 @@
 @media (max-width: 839px) and (min-width: 500px) {
   .whole-note{
     background-color: rgba(255, 255, 255, .9);
-    height: 300px;
+    height: 200px;
     width: 200px;
     padding: 1em;
-    font-size: 12px;
+    font-size: 14px;
     overflow: scroll;
     display: inline-block;
+  }
+
+  .note-title{
+    margin: 0;
   }
 }
 
@@ -60,11 +68,15 @@
 
   .whole-note{
     background-color: rgba(255, 255, 255, .9);
-    height: 300px;
+    height: 200px;
     width: 200px;
     padding: 1em;
-    font-size: 12px;
+    font-size: 14px;
     overflow: scroll;
     display: inline-block;
+  }
+
+  .note-title{
+    margin: 0;
   }
 }
