--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -15,21 +15,20 @@
         <a class="notes-link" href="http://localhost:9000/#notes"><span>Notes</span></a>
       </li>
       <li>
-        <a class="logout-button"><span>Logout</span></a>
+        <a href="#" class="logout-button"><span>Logout</span></a>
       </li>
     </ul>
   </nav>
 
   <div class="add-rack-div">
-      <button class="show-add-brl">Add a rack!</button>
-
-    <form class="add-brl-form hidden pure-form">
+    <button class="show-add-brl">Add a rack!</button>
+    <form class="add-brl-form hidden pure-form pure-form-stacked">
       <input class="title"type="text" placeholder="title">
       <input class="lat" type="text" placeholder="latitude">
       <input class="lng" type="text" placeholder="longitude">
       <input class="infoWindow"type="text" placeholder="add info">
       <button class="add-brl" type="submit" placeholder="Add">Submit</button>
-      <button class="remove-form">Clear</button>      
+      <button class="remove-form">Clear</button>
     </form>
   </div>
 </div>
