--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,6 +1,6 @@
 <div class="full-heading">
 
-  <h1 class="title">South Carolina Laws</h1>
+  {{!-- <h1 class="title">South Carolina Laws</h1> --}}
 
   <nav class="cl-effect-21">
     <ul class="header">
@@ -23,6 +23,8 @@
   </nav>
 </div>
 
+<h3 class="subtitle">Laws</h3>
+
 <ul class="laws">
   <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
   <li>Bicycles should be in the bike lane unless there is an obstruction. </li>
@@ -31,7 +33,9 @@
   <li>Cyclists must indicate turns.</li>
 </ul>
 
+<h3 class="subtitle">Suggestions</h3>
+
 <ul class="ideas">
-  <li>Helmets are not required, but prevent major brain damage and sometimes death.</li>
+  <li>Helmets are not required, but prevent major brain damage and death.</li>
   <li>When wearing headphones, only one ear is suggested. Hearing is the strongest advantage cyclists have above cars.</li>
 </ul>
