--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -1,7 +1,5 @@
 <div class="full-heading">
 
-  {{!-- <h1 class="title">South Carolina Laws</h1> --}}
-
   <nav class="cl-effect-21">
     <ul class="header">
       <li>
@@ -23,7 +21,10 @@
   </nav>
 </div>
 
-<h3 class="subtitle">Laws</h3>
+<ul>
+  <li class="subtitle">Laws</li>
+</ul>
+
 
 <ul class="laws">
   <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
@@ -32,8 +33,9 @@
   <li>Bicycles riding at night must have a white headlight and a red rear reflector.</li>
   <li>Cyclists must indicate turns.</li>
 </ul>
-
-<h3 class="subtitle">Suggestions</h3>
+<ul>
+  <li class="subtitle">Suggestions</li>
+</ul>
 
 <ul class="ideas">
   <li>Helmets are not required, but prevent major brain damage and death.</li>
