--- a/styles/_laws.scss
+++ b/styles/_laws.scss
@@ -19,11 +19,14 @@
 }
 
 .subtitle {
+  @include outer-container;
   @include span-columns(12);
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(239, 17, 123, .8);
+  color: rgba(255, 216, 56, 1);
   text-align: center;
   margin-top: .5em;
   margin-bottom: .5em;
+  font-size: 1.5em;
 }
 
 @media (min-width: 840px) {
